# C

./: minitest-1.md
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/conditional_compilation/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/conditionals/: CMakeLists.txt  main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/draft/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/literals/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/loops/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/pointers/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/program_organization/: CMakeLists.txt
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/type_conversion/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/conditional_compilation/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/conditionals/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/literals/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/memory_management/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/pointers/: main.c
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/program_organization/: CMakeLists.txt
D-mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/type_conversion/: main.c
mdig-agh-ccpp_clion-8da2d03dbbc9/: .gitignore
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c/: CMakeLists.txt  main.c
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_complex/: CMakeLists.txt  main.c
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_complex/include/: mylib.h
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_unittests/: CMakeLists.txt  main.c
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_unittests/include/: mylib.h
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_unittests/src/: mylib.c
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_c_unittests/test/: test_mylib.cpp
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_cpp/: CMakeLists.txt  main.cpp
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_cpp_unittests/: CMakeLists.txt  main.cpp
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_cpp_unittests/include/: mylib.hpp
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_cpp_unittests/src/: mylib.cpp
mdig-agh-ccpp_clion-8da2d03dbbc9/solutions/sample_cpp_unittests/test/: test_mylib.cpp
mdig-agh-lang_c__exercises-8b07bfe7cc20/: .gitignore  README.md
mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/literals/: main.c
mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/type_conversion/: CMakeLists.txt
mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/custom_types/: main.c
mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/loops/: CMakeLists.txt  main.c
mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/pointers/: CMakeLists.txt
(+14 files in other folders)
