cmake_minimum_required(VERSION 3.13)
set(PROJECT_ID sample_cpp_unittests)

project(${PROJECT_ID})

set(CMAKE_CXX_STANDARD 17)

add_compile_options(-Wall -Wextra -Werror -Wpedantic -pedantic-errors -Wconversion)

include_directories(include)

set(SOURCE_FILES
        src/mylib.cpp
        )

set(EXEC_DEBUG ${PROJECT_ID}__debug)
add_executable(${EXEC_DEBUG} ${SOURCE_FILES} main.cpp)


# == Unit testing using Google Testing Framework ==

set(SOURCES_FILES_TESTS
        test/test_mylib.cpp
        )

set(EXEC_TEST ${PROJECT_ID}__test)
add_executable(${EXEC_TEST} ${SOURCE_FILES} ${SOURCES_FILES_TESTS} test/main_gtest.cpp)

set(GTEST_ROOT ../../googletest-master)
target_include_directories(${EXEC_TEST} PUBLIC
        ${GTEST_ROOT}/googlemock/include
        ${GTEST_ROOT}/googletest/include
        )

add_subdirectory(${GTEST_ROOT} googletest-master)

target_link_libraries(${EXEC_TEST} gmock)
